fdswarm/resources/styles/app.css
.custom-radio .radio {
    -fx-shape: "";
    -fx-min-width: 0;
    -fx-min-height: 0;
    -fx-pref-width: 0;
    -fx-pref-height: 0;
    -fx-max-width: 0;
    -fx-max-height: 0;
}

.custom-radio {
    -fx-padding: 3 3 3 3;
    -fx-graphic-text-gap: 0;
}
.custom-radio:selected {
    -fx-background-color: lightblue;
    -fx-border-color: blue; /* Outline color when selected */
    -fx-border-width: 2; /* Outline thickness */
    -fx-border-radius: 5; /* Rounded corners for outline */
    /*-fx-padding: 5; !* Optional: Inner padding *!*/
}

.custom-radio:hover {
    -fx-background-color: lightgray; /* Optional: Hover effect */
    -fx-border-width: 2;
    -fx-border-radius: 5;

}

.clear-button {
    -fx-background-color: transparent;
    -fx-padding: 0;
    -fx-cursor: hand;
}

.clear-button:hover {
    -fx-background-color: lightgray; /* Optional: Hover effect */
    /*-fx-text-fill: lightgray;*/
    -fx-border-width: 2;
    -fx-border-radius: 5;

}

.dupCallsign {
    -fx-text-fill: red;
}
.dupCallsignMore {
    -fx-text-fill: red;
    -fx-font-style: italic;
}
.dipCallsign{
    -fx-text-fill: red;
    -fx-font-weight: bold;
}

.callSignOk{
    -fx-text-fill: green;
    -fx-font-weight: bold;
}

.section-match {
    -fx-background-color: yellow;
    -fx-border-color: orange;
    -fx-border-width: 1;
    -fx-border-radius: 2;
}

.qso-submit-highlight {
    -fx-control-inner-background: #e0ffe0; /* Light green for text fields */
    -fx-background-color: #e0ffe0;
    -fx-border-color: green;
    -fx-border-width: 1;
    -fx-background-radius: 5;
    -fx-border-radius: 5;
    -fx-padding: 5;
}
.discardButton{

}
.json-pretty-print {
    -fx-font-family: "monospace";
}

.contest-before {
    -fx-text-fill: blue;
    -fx-font-weight: bold;
}

.contest-during {
    -fx-text-fill: green;
    -fx-font-weight: bold;
}

.contest-after {
    -fx-text-fill: red;
    -fx-font-weight: bold;
}


.duplicate-qso{
    -fx-text-fill: red;
    -fx-font-weight: bold;
}
.addQsoOk{
    -fx-text-fill: green;
    -fx-font-weight: bold;
}
.dup-label {
    -fx-text-fill: red;
    -fx-font-weight: bold;
}
.dup-callsign {
    -fx-text-fill: red;
}

